[refactor] 统一tool的使用